--- a/build.gradle
+++ b/build.gradle
@@ -17,11 +17,8 @@ plugins {
 
 apply plugin: 'org.springframework.boot'
 
-allprojects {
-    repositories {
-        mavenCentral()
-        mavenLocal()
-    }
+bootJar {
+    version =  '0.0.1'
 }
 
 repositories {
@@ -30,10 +27,12 @@ repositories {
 }
 
 group='io.ifelsecoders'
-version='0.0.1-SNAPSHOT'
+version='0.0.1'
 sourceCompatibility = 12
 targetCompatibility = 12
 
 dependencies {
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.1.5.RELEASE'
+    implementation("org.springframework.boot:spring-boot-starter-web")
+    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+    implementation('org.postgresql:postgresql')
 }
