--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,19 +5,20 @@ spring:
   application:
     name:   spring-boot-with-multiples-datasources
   jpa:
-    #generate-ddl: true
-    hibernate.ddl-auto: update
+  # generate-ddl: true
+    hibernate.ddl-auto: update #create
     properties:
       hibernate:
         jdbc:
           lob.non_contextual_creation: true
-  datasource:
-    url: jdbc:postgresql://localhost:5434/postgres
-    username: root
-    password: datasource1
-    #initialization-mode: never
 
-app.second.datasource:
+app.cars.datasource:
+  url: jdbc:postgresql://localhost:5434/postgres
+  username: root
+  password: datasource1
+  #initialization-mode: never
+
+app.trucks.datasource:
   url: jdbc:postgresql://localhost:5435/postgres
   username: root
   password: datasource2
